Small fixes
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>