@@ -62,6 +62,8 @@
             <arg>jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
             <arg>--add-exports</arg>
             <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
           </compilerArgs>
         </configuration>
       </plugin>
